# prescription

./: .env.example  .gitignore  README.md  pyproject.toml
server/: config.py  main.py  smoke_test.py  test_pipeline.py
server/core/: logger.py  schemas.py  session.py
server/export/: pdf_generator.py
server/llm/: base.py  groq_provider.py  ollama_provider.py
server/ui/: dashboard.py
server/voice/: base.py  faster_whisper_stt.py  groq_whisper_stt.py  openai_whisper_stt.py  prompts.py  recorder.py
server/web/: README.md  __init__.py  app.py  schemas.py  session_store.py
server/web/routes/: __init__.py  session.py
server/web/static/: index.html
server/web/static/css/: styles.css
server/web/static/js/: app.js
tests/: conftest.py  test_fuzzy_matcher.py  test_groq_whisper_stt.py  test_indexer.py  test_llm_parsing.py  test_pdf_generator.py  test_recorder.py  test_tiered_matching.py
