[project]
name = "prescription"
version = "0.1.0"
description = "AI-powered voice medical prescription assistant"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sounddevice",
    "fpdf2",
    "groq",
    "ollama",
    "rapidfuzz",
    "faster-whisper",
    "rich",
    "numpy",
    "httpx",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
]

[project.scripts]
prescription     = "server.main:main"
prescription-web = "server.web.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]
